src/span/snapshots/hebi__span__tests__emit_report_multi_line.snap
---
source: src/span/tests.rs
expression: "SpannedError::new(\"error: test\",\n        13..36).report(\"let x: Foo = Bar {\\n  a: 0,\\n  b: 0,\\n};\", true)"
---
error: test
| let x: Foo = [4;31mBar {[0m
| [4;31m  a: 0,[0m
| [4;31m  b: 0,[0m
| [4;31m}[0m;
